--- a/src/Components/Jobs/index.css
+++ b/src/Components/Jobs/index.css
@@ -1,100 +1,208 @@
-.jobContainer {
-  background-color: #202020;
+.all-jobs-container {
+  background-color: #000000;
+  padding: 40px;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-grow: 1;
 }
-.leftCard {
-  width: 30%;
-  margin-top: 20px;
-  align-self: flex-start;
+
+.jobs-heading {
+  color: #ffffff;
 }
-.rightCard {
-  margin-top: 20px;
-  width: 70%;
+
+.side-bar-container {
+  width: 25%;
 }
-.inputContainer {
-  margin-left: 80px;
-  padding-left: 20px;
+
+.profile-container {
+  background-image: url('https://assets.ccbp.in/frontend/react-js/profile-bg.png');
+  background-size: cover;
+  padding: 25px;
   width: 100%;
-  display: flex;
-  align-items: center;
+  height: 35vh;
+  border-radius: 25px;
 }
-.input3 {
-  background-color: transparent;
-  outline: #ffffff;
-  border-color: #ffffff;
-  color: #ffffff;
-  padding: 10px;
-  width: 30%;
+
+.profile-icon {
+  color: blue;
+  font-size: 50px;
 }
-.icon1 {
-  background-color: #7e858e;
+
+.profile-name {
+  color: #505068;
+  font-family: 'Roboto';
 }
-.noJobCard {
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  align-self: flex-end;
-  margin-right: 350px;
-}
-.title1 {
-  color: #ffffff;
-  font-size: 20px;
+
+.profile-description {
+  font-family: 'Roboto';
+  color: #000000;
   font-weight: bold;
 }
+
+.hr-line {
+  border: 2px solid grey;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+.text {
+  color: #ffffff;
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.check-boxes-container {
+  list-style: none;
+}
+
+.li-container {
+  margin-bottom: 10px;
+}
+
+.input {
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
+}
+
 .label {
   color: #ffffff;
+  font-size: 20px;
 }
-.errorMsg {
-  color: #ffffff;
-  font-size: 15px;
+
+.radio {
+  width: 18px;
+  height: 18px;
+  margin-right: 10px;
 }
-.noJobImage {
-  height: 600px;
-  margin-top: 100px;
-  width: 600px;
-}
-.button5 {
-  padding: 10px;
-}
-.loaderContainer {
+
+.loader-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 100%;
+}
+
+.failure-button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 35vh;
+}
+
+.failure-img {
+  width: 90%;
+  height: 350px;
+}
+
+.failure-button {
+  color: #ffffff;
+  background-color: #6366f1;
+  border: 0;
+  border-radius: 5px;
+  padding: 5px;
+  width: 100px;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.jobs-container {
+  width: 72%;
+  height: 100%;
+}
+
+.jobs-failure-button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.failure-heading {
+  color: #ffffff;
+  font-family: 'Roboto';
+  text-align: center;
+}
+
+.failure-paragraph {
+  color: #ffffff;
+  font-family: 'Roboto';
+  text-align: center;
+}
+
+.search-input {
+  background-color: transparent;
+  border: 2px solid grey;
+  border-right: none;
+  height: 40px;
+  width: 50%;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  margin-bottom: 50px;
+  padding-left: 10px;
+  font-size: 20px;
+  color: #ffffff;
+}
+
+.search-button {
+  height: 40px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  width: 39px;
+  cursor: pointer;
+  border: 0;
   background-color: #202020;
 }
 
-@media screen and (max-width: 768px) {
-  .leftCard {
+.search-icon {
+  color: #ffffff;
+  font-size: 20px;
+}
+
+.no-jobs-container {
+  color: #ffffff;
+  font-family: 'Roboto';
+  text-align: center;
+}
+
+.no-jobs-img {
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .all-jobs-container {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+  }
+
+  .side-bar-container {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
-  .rightCard {
+
+  .search-input {
+    width: 80%;
+  }
+
+  .jobs-container {
     width: 100%;
   }
-  .jobContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+  .ul-job-items-container {
+    width: 100%;
+    padding: 0;
   }
-  .noJobImage {
-    height: 150px;
-    margin-top: 20px;
-  }
-  .error {
-    font-size: 20px;
-  }
-  .noJobCard {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
+
+  .failure-img {
+    width: 90%;
+    height: 90%;
   }
 }
